
--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.4k
------------
* Asche's magic box now counts toward purchases for tasks
* Added quest log entries for Vaughn's second and third task
* Added Lei's first task + reward (you need to have talked to him about bodyguarding and offered first to get the sexy reward)
* Did some body format restructuring, making the code more structured
* Fixed a bug which would remove your naga body on loading a save

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4j
------------
* Fixed a whole lot of bugs in Kiai
* Fixed a bunch of typos in Kiai, intro Imps. Thanks CalmKhaos!
* Restructured a whole lot of old intro code. Poke me if anything looks strange (broken parser refs etc)
* Fixed a bug that would lock out strapon action for Kiai
* Run is no longer 100% certain. It's based on your level and the level of the encounter (ie the first mob). Debug is always 100%
* Added a marker for end of current content at the mound
* Vaughns third task, written by the Observer, has been added. Bit more complex than the last ones, and has possibilities for sex. Don't be late!
* Lei now has some more interactions, written by Del
* Asche has a new task (buy-in 1500 coin), with a unique sex scene at the end. Written by the Observer
* Asche has two new magic talks. They require some story progression, plus you finishing task 2 and 3 respectively
* Asche will now let you reach into her magic box (heh), for a fee. It's a money sink, but there's at least one item you can get here that's very powerful
* Two new chapters of Gryphons added to The Shadow Lady, written by the Observer.

Version 0.4i
------------
* Fixed a bunch of bugs and typos.
* Added new effects to a bunch of TF items. Among other things:
 - Adjusting femininity
 - Adjusting muscle tone (not widely used atm)
 - Adjusting hip size